Weird spacing fixed

--- a/app/src/components/Cards/EditUser/style.css
+++ b/app/src/components/Cards/EditUser/style.css
@@ -24,6 +24,15 @@
     font-family: Lato, sans-serif;
     cursor: pointer;
   }
+  .spacerDiv {
+    background: none;
+    border: 0px;
+    color: #c0e8ff;
+    font-size: 15px;
+    width: 60px;
+    margin: 10px 0 0;
+    font-family: Lato, sans-serif;
+  }
 .listDiv button:hover {
     color: #333;
   }
